--- a/methodsPaper/tex/materialsAndMethods.tex
+++ b/methodsPaper/tex/materialsAndMethods.tex
@@ -24,3 +24,8 @@ a \logNormal{} distribution with constant coefficient of variation
 across age-sex strata.  Travel-related exposure is estimated from
 active transport time using assumptions about how much physical
 activity is required for cycling and walking.
+
+\begin{figure}[t]
+  \centerline{\includegraphics[width=\textwidth]{./figures/fig2.pdf}}
+    \caption{}\label{fig1}
+\end{figure}
