--- a/methodsPaper/tex/results.tex
+++ b/methodsPaper/tex/results.tex
@@ -1,24 +1,24 @@
-We used the National Household Transportation Survey to estimate the
-mean walk and cycle times for individuals that live in metropolitan
-areas for each of seven states (CA, TX, NY, FL, VA, NC and AZ)
-\cite{NHTS}.  These states were selected becaused they had sufficient
-sample size for reasonable estimates of age-sex specific
-travel-related walking and cycling means, Figure \ref{meanMatrices}.
+%% We used the National Household Transportation Survey to estimate the
+%% mean walk and cycle times for individuals that live in metropolitan
+%% areas for each of seven states (CA, TX, NY, FL, VA, NC and AZ)
+%% \cite{NHTS}.  These states were selected becaused they had sufficient
+%% sample size for reasonable estimates of age-sex specific
+%% travel-related walking and cycling means, Figure \ref{meanMatrices}.
 
-\begin{figure}[t]
-  \centerline{\includegraphics[width=\textwidth]{./figures/fig3.pdf}}
-    \caption{Mean travel time by mode (walking/cycling) for each of
-      seven states.  National means are displayed on the
-      right.}\label{meanMatrices}
-\end{figure}
+%% \begin{figure}[t]
+%%   \centerline{\includegraphics[width=\textwidth]{./figures/fig3.pdf}}
+%%     \caption{Mean travel time by mode (walking/cycling) for each of
+%%       seven states.  National means are displayed on the
+%%       right.}\label{meanMatrices}
+%% \end{figure}
 
-Of these seven states one was found to show active transport behavior
-that, if adopted nation-wide, would avert 75-100,000 DALYs overall.
-Values for national disease-specific DALYs were found using the CDC
-Wonder database \cite{CDCWonder}.  California stood out among the
-estimates for national DALYs averted.  Most of the decrease in DALYs
-is due to prevention of dementia in the oldest age group, $80+$ years
-old.  California exhibits much greater walking and cycling means in
-this age group than the national average. In particular we see the
-cycling mean We also see prevention of depression and diabetes in the
-middle age groups due to increased active transport time.
+%% Of these seven states one was found to show active transport behavior
+%% that, if adopted nation-wide, would avert 75-100,000 DALYs overall.
+%% Values for national disease-specific DALYs were found using the CDC
+%% Wonder database \cite{CDCWonder}.  California stood out among the
+%% estimates for national DALYs averted.  Most of the decrease in DALYs
+%% is due to prevention of dementia in the oldest age group, $80+$ years
+%% old.  California exhibits much greater walking and cycling means in
+%% this age group than the national average. In particular we see the
+%% cycling mean We also see prevention of depression and diabetes in the
+%% middle age groups due to increased active transport time.
