--- a/methodsPaper/tex/materialsAndMethods.tex
+++ b/methodsPaper/tex/materialsAndMethods.tex
@@ -26,10 +26,10 @@ active transport time using assumptions about how much physical
 activity is required for cycling and walking.
 
 
-\begin{figure}[t]
-  \centerline{\includegraphics[width=\textwidth]{./figures/fig2.pdf}}
-    \caption{}\label{fig1}
-\end{figure}
+% \begin{figure}[t]
+%   \centerline{\includegraphics[width=\textwidth]{./figures/fig2.pdf}}
+%     \caption{}\label{fig1}
+% \end{figure}
 
 % does this involve using the CDC Wonder data? we could add a bit here
 % about it, but if this is just national estimtes and shifts perhaps
