added paragraph on methodology

--- a/methodsPaper/tex/materialsAndMethods.tex
+++ b/methodsPaper/tex/materialsAndMethods.tex
@@ -44,3 +44,5 @@ eliminated counties in the US with the classifcation of
 classification schemes as well as county and state identifiers in
 other datsets (NHTS, ATUS, CDC WONDER) to ensure consistency in our
 estimates for input parameters.
+
+To test the new implementation of ITHIM's active transportation component, we used the UW national metro population estimates for active travel time (walking and cycling) as the baseline. We obtained active travel time input parameters for alternate scenarios using states with large sample sizes. From these examples we were able to approximate low and high active travel scenarios. Finally we applied these active travel times to the US metro population to perform the comparative risk assessment agains the baseline US numbers. We then examined the sensitivity of disease burden estimates to input parameters including the active travel time and non-travel activity. 
