vary NTM paragraph

--- a/methodsPaper/tex/results.tex
+++ b/methodsPaper/tex/results.tex
@@ -1,5 +1,7 @@
 Our subset of the US population to only metropolitan counties consisted of 1,090 of 3,141 (34.7\%) counties, or x of y (z\%) of the total US population. The age and gender distribution of our subset population was slightly younger (making this up) than the national population. Active transport times (walking and cycling) for baseline, low, and high scenarios are shown in \ref{fig:ATtimes}. Overall mean walking time for high and low scenarios were X (min/week) higher and Y (min/week) lower than baseline, respectively. Baseline non-travel activity time was estimated to be X (min/week) from the ATUS for US metropolitan populations.  
 
+Running the model to compare baseline to low and high scenarios produced estimates of X change in the disease burden (1,000s DALYs) for our US population subset. We then varied the mean non-travel activity time and active travel time to observe how this chaged results (\ref{fig:currentFig1}).
+
 %% We used the National Household Transportation Survey to estimate the
 %% mean walk and cycle times for individuals that live in metropolitan
 %% areas for each of seven states (CA, TX, NY, FL, VA, NC and AZ)
