--- a/methodsPaper/tex/results.tex
+++ b/methodsPaper/tex/results.tex
@@ -1,28 +1,5 @@
 Our subset of the US population to only metropolitan counties consisted of 1,090 of 3,141 (34.7\%) counties, or x of y (z\%) of the total US population. The age and gender distribution of our subset population was slightly younger (making this up) than the national population. Active transport times (walking and cycling) for baseline, low, and high scenarios are shown in \ref{fig:ATtimes}. Overall mean walking time for high and low scenarios were X (min/week) higher and Y (min/week) lower than baseline, respectively. Baseline non-travel activity time was estimated to be X (min/week) from the ATUS for US metropolitan populations.  
 
-Running the model to compare baseline to low and high scenarios produced estimates of X change in the disease burden (1,000s DALYs) for our US population subset. We then varied the mean non-travel activity time and active travel time to observe how this chaged results (\ref{fig:currentFig1}).
+Running the model to compare baseline to low and high scenarios produced estimates of X change in the disease burden (1,000s DALYs) for our US population subset. We then varied the mean non-travel activity time and active travel time to observe how this chaged results (\ref{fig:currentFig1}). We observe the most dramatic responses in disease burden estimates to changes in active travel time when non-travel activity times are lowest. This result is consistent with the non-linear dose-response curve for physical activity and several health outcomes. The total health benefit of increased active travel time (high scenario) varies from X to Y with changing mean non-travel activity time (0 to 25 minutes). 
 
-%% We used the National Household Transportation Survey to estimate the
-%% mean walk and cycle times for individuals that live in metropolitan
-%% areas for each of seven states (CA, TX, NY, FL, VA, NC and AZ)
-%% \cite{NHTS}.  These states were selected becaused they had sufficient
-%% sample size for reasonable estimates of age-sex specific
-%% travel-related walking and cycling means, Figure \ref{meanMatrices}.
 
-%% \begin{figure}[t]
-%%   \centerline{\includegraphics[width=\textwidth]{./figures/fig3.pdf}}
-%%     \caption{Mean travel time by mode (walking/cycling) for each of
-%%       seven states.  National means are displayed on the
-%%       right.}\label{meanMatrices}
-%% \end{figure}
-
-%% Of these seven states one was found to show active transport behavior
-%% that, if adopted nation-wide, would avert 75-100,000 DALYs overall.
-%% Values for national disease-specific DALYs were found using the CDC
-%% Wonder database \cite{CDCWonder}.  California stood out among the
-%% estimates for national DALYs averted.  Most of the decrease in DALYs
-%% is due to prevention of dementia in the oldest age group, $80+$ years
-%% old.  California exhibits much greater walking and cycling means in
-%% this age group than the national average. In particular we see the
-%% cycling mean We also see prevention of depression and diabetes in the
-%% middle age groups due to increased active transport time.
