--- a/methodsPaper/tex/results.tex
+++ b/methodsPaper/tex/results.tex
@@ -1,5 +1,8 @@
-Our subset of the US population to only metropolitan counties consisted of 1,090 of 3,141 (34.7\%) counties, or x of y (z\%) of the total US population. The age and gender distribution of our subset population was slightly younger (making this up) than the national population. Active transport times (walking and cycling) for baseline, low, and high scenarios are shown in \ref{fig:ATtimes}. Overall mean walking time for high and low scenarios were X (min/week) higher and Y (min/week) lower than baseline, respectively. Baseline non-travel activity time was estimated to be X (min/week) from the ATUS for US metropolitan populations.  
+Our subset of the US population to only metropolitan counties consisted of 1,090 of 3,141 (34.7\%) counties, or ???X??? of ???Y??? (???Z???\%) of the total US population. The age and gender distribution of our subset population was slightly younger (???making this up???) than the national population. Active transport times (walking and cycling) for baseline, low, and high scenarios are shown in \ref{fig:ATtimes}. Overall mean walking time for high and low scenarios were ???X??? (min/week) higher and ???Y??? (min/week) lower than baseline, respectively. Baseline non-travel activity time was estimated to be ???X??? (min/week) from the ATUS for US metropolitan populations.  
 
-Running the model to compare baseline to low and high scenarios produced estimates of X change in the disease burden (1,000s DALYs) for our US population subset. We then varied the mean non-travel activity time and active travel time to observe how this chaged results (\ref{fig:currentFig1}). We observe the most dramatic responses in disease burden estimates to changes in active travel time when non-travel activity times are lowest. This result is consistent with the non-linear dose-response curve for physical activity and several health outcomes. The total health benefit of increased active travel time (high scenario) varies from X to Y with changing mean non-travel activity time (0 to 25 minutes). 
+Comparing baseline to low/high scenarios produced estimates of ???X??? change in the disease burden (1,000s DALYs) for our US population subset. We then varied the mean non-travel activity time and active travel time to observe how this chaged results (\ref{fig:currentFig1}). We observe the most dramatic responses in disease burden estimates to changes in active travel time when non-travel activity times are lowest. This result is consistent with the non-linear dose-response curve for physical activity and several health outcomes. The total health benefit of increased active travel time (high scenario) varies from ???X??? to ???Y??? with changing mean non-travel activity time (0 to 25 minutes). 
 
+Adapting ITHIM's methods to the R platform enables the rapid and thorough assessment of parameter influence within the model. Another important improvement enabled by the shift to a more computationaly robust platform was to examine methodological assumptions of former implementations. One critical assumption invovles the approximation of _____ used to calculate the attirbutable fraction (see Figure \ref{fig:overview}). Previous implementations used quitiles to approximate this value, essentailly the area under the ___????___ curve. We improved upon those methods to use percentiles or 100 points to estimate the same values. We find our estimates to be much more stable and reliable at all values of active travel and non-travel activity parameters.
+
+As exhibited in Figure \ref{fig:percentQuint}, the variability in disease burden benfits varies to a much greater degree when using fewer points in the attirbutable fraction approximation. 
 
