Created two new figures
Also created appendix.Rnw to store old R code.

--- a/methodsPaper/tex/results.tex
+++ b/methodsPaper/tex/results.tex
@@ -4,7 +4,7 @@ consisted of 1,090 of 3,141 (34.7\%) counties, or ???X??? of ???Y???
 distribution of our subset population was slightly younger (???making
 this up???) than the national population. Active transport times
 (walking and cycling) for baseline, low, and high scenarios are shown
-in \ref{fig:ATtimes}. Overall mean walking time for high and low
+in \ref{fig2}. Overall mean walking time for high and low
 scenarios were ???X??? (min/week) higher and ???Y??? (min/week) lower
 than baseline, respectively. Baseline non-travel activity time was
 estimated to be ???X??? (min/week) from the ATUS for US metropolitan
@@ -13,14 +13,14 @@ populations.
 Comparing baseline to low/high scenarios produced estimates of ???X???
 change in the disease burden (1,000s DALYs) for our US population
 subset. We then varied the mean non-travel activity time and active
-travel time to observe how this chaged results
-(\ref{fig:currentFig1}). We observe the most dramatic responses in
-disease burden estimates to changes in active travel time when
-non-travel activity times are lowest. This result is consistent with
-the non-linear dose-response curve for physical activity and several
-health outcomes. The total health benefit of increased active travel
-time (high scenario) varies from ???X??? to ???Y??? with changing mean
-non-travel activity time (0 to 25 minutes).
+travel time to observe how this chaged results (\ref{fig1}). We
+observe the most dramatic responses in disease burden estimates to
+changes in active travel time when non-travel activity times are
+lowest. This result is consistent with the non-linear dose-response
+curve for physical activity and several health outcomes. The total
+health benefit of increased active travel time (high scenario) varies
+from ???X??? to ???Y??? with changing mean non-travel activity time (0
+to 25 minutes).
 
 Adapting ITHIM's methods to the R platform enables the rapid and
 thorough assessment of parameter influence within the model. Another
@@ -35,6 +35,6 @@ estimate the same values. We find our estimates to be much more stable
 and reliable at all values of active travel and non-travel activity
 parameters.
 
-As exhibited in Figure \ref{fig:percentQuint}, the variability in
-disease burden benfits varies to a much greater degree when using
-fewer points in the attirbutable fraction approximation.
+As exhibited in Figure \ref{fig1}, the variability in disease burden
+benfits varies to a much greater degree when using fewer points in the
+attirbutable fraction approximation.
