--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -446,5 +446,5 @@ names(D) <- c("disease","sex","ageClass","type","burden", "sex2", "disease2")
 D <- within(D, sex <- factor(sex, levels = c("F","M")))
 
 p <- ggplot(subset(D, disease %in% c("BreastCancer","ColonCancer","Dementia","Depression","Diabetes", "CVD")), aes(x = ageClass, y = burden/1e3, fill = sex)) + geom_bar(stat= "identity", position = "dodge")
-p + theme_bw() + scale_x_discrete(name="", labels = c("0-4","5-14","15-29","30-44","45-59","60-69","70-79","80+")) + scale_y_continuous(name="Nationwide Burden (thousands)") + theme(axis.text.x  = element_text(angle = 90, vjust = 0.5, size = 8)) + facet_grid( type ~ disease, scales = "free_y")
+p + theme_bw() + scale_x_discrete(name="", labels = c("0-4","5-14","15-29","30-44","45-59","60-69","70-79","80+")) + scale_y_continuous(name="Nationwide Burden (thousands)") + theme(axis.text.x  = element_text(angle = 90, vjust = 0.5, size = 8)) + facet_grid( disease ~ type, scales = "free_y")
 ```
