Edits to Abstract

--- a/methodsPaper/tex/abstract.tex
+++ b/methodsPaper/tex/abstract.tex
@@ -1,4 +1,23 @@
-Comparative risk assessment exercises to quantify the health potential of active transportation have been performed in the United States on a limited basis. Current methodologies, which rely on entensive data collection activities and user expertise, have estimated health benefits for select metropolitan areas under a few alternative scenarios. These analyses have largely been conducted using the Intergrated Transport Health Impacts Model (IHTIM), which was developed in the UK and has been adapted for use in the US, primarility California. Here we present an implementation of one portion of ITHIM's comparative risk assessment framework to model the health impacts of modified physical activity patterns from biking and walking. Using the newly-developed ITHIM package available for the R Software platform publically-available datasets with coverage for the entire US are used to quantify changes in diability adjusted life years. We examine the sensitivity of outcomes for the nation to input parameters; active travel time, non-travel physical activity time, specifically. The revised R package implemention of ITHIM's physical activity component provides a robust and stable means of examining the potential for changes in transportation behavior in the US, and the distribution of those benefits across age and gender categories.
+Comparative risk assessment analyses to quantify the health potential
+of active transportation, e.g., walking and cycling, have been
+performed in the United States on a limited basis. Current
+methodologies, which rely on extensive data collection and user
+expertise, have estimated health benefits for select metropolitan
+areas under a few alternative scenarios. These analyses have largely
+been conducted using the Integrated Transport Health Impacts Model
+(ITHIM) which was developed in the UK and has been adapted for use in
+the US, primarily California. Here we present an implementation of the
+active transportation component of ITHIM to model the health impacts
+of modified active transportation levels. Using the newly developed
+software package \package{} written in R, along with publicly
+available national datasets, we quantify the change in disability
+adjusted life years over a wide range of scenarios.  The R package
+implemention of ITHIM's physical activity component provides a robust
+environment for exploring the relationship between active
+transportation and positive health outcomes.  A web-based
+user-interface is available for users who want a first estimate for
+the impact active transportation has on their
+state/county/tract/region.
 
 %% While increased active transportation, primarily cycling and walking,
 %% is often held up as a goal for improved public health --- via reduced
